added js menu change

--- a/style.css
+++ b/style.css
@@ -21,8 +21,62 @@ html {
   background: linear-gradient(#232932, #2c3138, #232932);
 }
 /*Navigation  stiles*/
+.menu-icon {
+  width: 3rem;
+  height: 3rem;
+  /* background-color: #ccc; */
+  position: fixed;
+  top: 5rem;
+  right: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  z-index: 200;
+}
+.line{
+    width: 3rem;
+    height: 0.2rem;
+   background-color: #bbb;
+}
+
 .navigation {
-  display: none;
+    
+position: fixed;
+top: -8rem;
+right: -63rem;
+width: 50rem;
+height: 100vh;
+background-color: #31363d;
+z-index: 100;
+display: flex;
+align-items: center;
+padding-left: 8rem;
+transform: rotateZ(-15deg);
+transition: all .6s;
+}
+.change .navigation{
+   top: 0;
+   right: 0;
+   transform: rotateZ(0); 
+}
+.nav-items{
+    display: flex;
+    flex-direction: column;
+}
+.nav-items a{
+    font-size: 3rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    color: #eee;
+    margin: 1rem 0;
+    transition: color 0.5s;
+
+}
+.nav-items a:hover{
+    color: #29a587;
 }
 /* END of NAvigation stiles*/
 
@@ -99,113 +153,113 @@ html {
   left: -1.65rem;
   bottom: -3rem;
 }
-.developer-info{
-    margin-right: 15rem;
+.developer-info {
+  margin-right: 15rem;
 }
 
-.greeting{
-    font-size: 1.6rem;
-    text-transform: uppercase;
-    color: #fff;
-    letter-spacing: 0.1rem;
+.greeting {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  color: #fff;
+  letter-spacing: 0.1rem;
 }
-.greeting span{
-    color: #29a587;
+.greeting span {
+  color: #29a587;
 }
-.name{
-    font-size: 10rem;
-    width: 60rem;
-    margin: 4rem 0 2rem 0;
-    color: #fff;
-    text-shadow:0.5rem 1rem rgb(0, 0, 0,0.3 );
+.name {
+  font-size: 10rem;
+  width: 60rem;
+  margin: 4rem 0 2rem 0;
+  color: #fff;
+  text-shadow: 0.5rem 1rem rgb(0, 0, 0, 0.3);
 }
-.name span{
-    color: #29a587;
-    margin-right: 2rem;
+.name span {
+  color: #29a587;
+  margin-right: 2rem;
 }
-.prof{
-    font-size: 1.8rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    color: #fff;
-    letter-spacing: .2rem;
-    margin-bottom: 6rem;
+.prof {
+  font-size: 1.8rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #fff;
+  letter-spacing: 0.2rem;
+  margin-bottom: 6rem;
 }
-.prof span{
-    font-family: "Caveat", cursive;
-    font-size: 3rem;
-    font-weight: bold;
-    text-transform: capitalize;
-    margin-left: 1.2rem;
+.prof span {
+  font-family: "Caveat", cursive;
+  font-size: 3rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  margin-left: 1.2rem;
 }
-.about{
-    width: 60rem;
-    font-family: "Caveat", cursive;
-    font-size: 2.5rem;
-    line-height: 1;
-    color: #a9abae;
-    margin-bottom: 5rem;
+.about {
+  width: 60rem;
+  font-family: "Caveat", cursive;
+  font-size: 2.5rem;
+  line-height: 1;
+  color: #a9abae;
+  margin-bottom: 5rem;
 }
-.social-media{
-    margin-bottom: 5rem;
-}
-
-.social-media i{
-font-size: 2.5rem;
-color: #fff;
-margin-right: 2rem;
-text-shadow: 0.5rem 1rem rgb(0,0,0,0.3 );
-cursor: pointer;
+.social-media {
+  margin-bottom: 5rem;
 }
 
-.btn{
+.social-media i {
+  font-size: 2.5rem;
+  color: #fff;
+  margin-right: 2rem;
+  text-shadow: 0.5rem 1rem rgb(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.btn {
   width: 20rem;
   height: 6rem;
-  border: 0.2rem solid#bbb; 
+  border: 0.2rem solid#bbb;
   border-radius: 3rem;
   background-color: transparent;
   font-size: 1.4rem;
   text-transform: uppercase;
   color: #fff;
-  cursor: pointer; 
+  cursor: pointer;
   margin-right: 7rem;
   position: relative;
 }
-.btn::before{
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: #29a587;
-    border-radius: 3rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -10;
-    transform:scale(0);
-    transition: transform .3s;
+.btn::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #29a587;
+  border-radius: 3rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  transform: scale(0);
+  transition: transform 0.3s;
 }
-.btn:hover::before{
-transform: scale(1);
-transition:transform .5s;
+.btn:hover::before {
+  transform: scale(1);
+  transition: transform 0.5s;
 }
-.cv-btn::after{
-content: "";
-width: 5rem;
-height: 0.2rem;
-background-color: #bbb;
-position: absolute;
-top: 50%;
-right: -5rem;
-transform: translateY(-50%);
+.cv-btn::after {
+  content: "";
+  width: 5rem;
+  height: 0.2rem;
+  background-color: #bbb;
+  position: absolute;
+  top: 50%;
+  right: -5rem;
+  transform: translateY(-50%);
 }
-.cv span{
-   font-size: 1.4rem;
-   font-weight: 300;
-   text-transform: uppercase;
-   color: #fff; 
+.cv span {
+  font-size: 1.4rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #fff;
 }
-.developer-img{
-    position: relative;
+.developer-img {
+  position: relative;
 }
 
 .dev-img-wrapper {
@@ -216,48 +270,46 @@ transform: translateY(-50%);
   padding: 2rem 2rem 0 2rem;
   box-shadow: 0 1rem rgb(0, 0, 0, 0.2);
   overflow: hidden;
-  
 }
 
 .dev-img-wrapper img {
   width: 100%;
   height: 100%;
 }
-.dev-work{
-    width: 25rem;
-    height: 9rem;
-    background-color: #1d222a;
-    font-size: 1.4rem;
-    text-transform: uppercase;
-    color: #fff;
-    border: 0.2rem solid #bbb;
-    border-radius: 6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 2rem;
-    box-shadow: 0.5rem 1rem rgb(0, 0, 0,0.4);
-    position: absolute;
+.dev-work {
+  width: 25rem;
+  height: 9rem;
+  background-color: #1d222a;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  color: #fff;
+  border: 0.2rem solid #bbb;
+  border-radius: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 2rem;
+  box-shadow: 0.5rem 1rem rgb(0, 0, 0, 0.4);
+  position: absolute;
 }
-.dev-experiance{
-    bottom: 10rem;
-    right: 40rem;
+.dev-experiance {
+  bottom: 10rem;
+  right: 40rem;
 }
 
-.dev-projects{
-    bottom: 1rem;
-    right: -2rem;
+.dev-projects {
+  bottom: 1rem;
+  right: -2rem;
 }
-.dev-work span:nth-child(1){
-font-size: 3em;
-width: 50%;
-text-align: center;
+.dev-work span:nth-child(1) {
+  font-size: 3em;
+  width: 50%;
+  text-align: center;
 }
-.dev-work span:nth-child(2){
-    color: #29a587;
-    width: 50%;
-   
-    }
+.dev-work span:nth-child(2) {
+  color: #29a587;
+  width: 50%;
+}
 /*END ofLanding  stiles*/
 
 /*ENNDS Containerstiles*/
