--- a/style.css
+++ b/style.css
@@ -583,7 +583,7 @@ letter-spacing: .1rem;
 .project-btn:hover i {
 margin-left: 2rem;
 }
-.prjects .btn{
+.projects .btn{
   margin: 5rem 0 0 0;
 
 
